Switch to WASM Graphviz and improve app structure
Replaces the previous Graphviz integration with the @hpcc-js/wasm-graphviz ES module for better performance and compatibility. Refactors app.js for improved readability, adds error handling, updates the starter DSL, and changes the SVG download filename. Updates index.html to load Graphviz via CDN as an ES module.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@ Book (N) -- (M) Author
     </section>
 </main>
 
-<script src="graphviz.min.js"></script>
+<!-- Load Graphviz WASM via ES module -->
+<script type="module">
+  import { Graphviz } from "https://cdn.jsdelivr.net/npm/@hpcc-js/wasm-graphviz/dist/index.min.js";
+  Graphviz.wasmFolder = "https://cdn.jsdelivr.net/npm/@hpcc-js/wasm-graphviz/dist/";
+  window.GraphvizModule = Graphviz;
+</script>
 <script src="parser.js"></script>
 <script src="app.js"></script>
 </body>
