--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </header>
 
 <main>
-    <section class="editor-section">
-        <h2>DSL Input</h2>
-        <textarea id="dslInput"></textarea>
-        <button id="compileBtn">Compile</button>
-        <button id="downloadBtn">Download SVG</button>
-    </section>
+    <div class="editor-preview-container">
+        <section class="editor-section">
+            <h2>DSL Input</h2>
+            <textarea id="dslInput"></textarea>
+            <button id="compileBtn">Compile</button>
+            <button id="downloadBtn">Download SVG</button>
+        </section>
 
-    <section class="preview-section">
-        <h2>SVG Preview</h2>
-        <div id="svgContainer">Your diagram will appear here...</div>
-    </section>
+        <section class="preview-section">
+            <h2>SVG Preview</h2>
+            <div id="svgContainer">Your diagram will appear here...</div>
+        </section>
+    </div>
 
     <section class="help-section">
         <h2>Help / Syntax</h2>
