--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <textarea id="dslInput"></textarea>
             <button id="compileBtn">Compile</button>
             <button id="downloadBtn">Download SVG</button>
+            <button id="downloadPngBtn">Download PNG</button>
         </section>
 
         <section class="preview-section">
