Add color configuration to Chen ER DSL
Introduces support for specifying entity, weak entity, and relationship colors in the DSL. Updates the parser and DOT output to apply these colors, and documents the new syntax in the help section and starter example.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
         <h2>Help / Syntax</h2>
         <pre id="helpText">
 # ==============================
-# Chen ER Diagram DSL – Syntax
+# Chen ER Diagram DSL - Syntax
 # ==============================
+
+# ------------------------------
+# Configuration (colors)
+# ------------------------------
+
+#colors
+entities: #AED6F1
+weak_entities: #D6EAF8
+relationships: #FFE4B5
 
 # ------------------------------
 # ENTITIES
