--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ HasEnrollment Enrollment (1) TOTAL -- (1) TOTAL Student
   window.GraphvizModule = Graphviz;
 </script>
 <script src="parser.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom/dist/svg-pan-zoom.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
