--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description"
+      content="A code-based Chen ER diagram generator. Write text to generate Chen notation ER diagrams online. No drag-and-drop, free and open source." />
 <title>Chen ER Diagram Generator</title>
 <link rel="stylesheet" href="style.css">
 </head>
