Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description"
       content="A code-based Chen ER diagram generator. Write text to generate Chen notation ER diagrams online. No drag-and-drop, free and open source." />
+<meta name="google-site-verification" content="sgThf8gCfTN-fJIaLhY_0dcTRcwYE_8rnmvBj2APn3U" />
 <title>Chen ER Diagram Generator</title>
 <link rel="stylesheet" href="style.css">
 </head>
